--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+.custom-radio {
+  appearance: none;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  outline: none;
+  margin-right: 8px;
+  position: relative;
+  cursor: pointer;
+}
+
+.custom-radio:checked {
+  border-color: #FA3737;
+}
+
+.custom-radio:checked::after {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: #FA3737;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .coachGradient {
   background: rgb(93,33,33);
   background: linear-gradient(90deg, rgba(93,33,33,1) 0%, rgba(25,25,25,1) 4%);
